examples/test/testpolicy17398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17398
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key39: value39
      key31: value38
      key9: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value23
          key1: value4
          key3: value8
      podSelector:
        matchLabels:
          key21: value41
